--- a/Java Mastery/pom.xml
+++ b/Java Mastery/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.7.Final</version>
+        </dependency>
+
 
         <!--        Spring dependencies-->
         <dependency>
