--- a/Java Mastery/pom.xml
+++ b/Java Mastery/pom.xml
@@ -18,7 +18,7 @@
         <h2.version>1.4.200</h2.version>
         <spring-framework-bom.version>5.3.4</spring-framework-bom.version>
         <jackson-databind.version>2.12.1</jackson-databind.version>
-
+        <hibernate-validator.version>6.1.7.Final</hibernate-validator.version>
 
         <!--plugins' versions-->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -69,9 +69,8 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.1.7.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
-
 
         <!--        Spring dependencies-->
         <dependency>
